fixed input scrollbar

--- a/src/components/notes/Notes.css
+++ b/src/components/notes/Notes.css
@@ -91,6 +91,11 @@
     border: none;
     outline: none;
   }
+
+.textarea_text::-webkit-scrollbar {
+    display: none;
+  }
+  
 .note-submit-button{
     
     height: fit-content;
